--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+
+
+  <link rel="icon" href="favicons/favicon.ico" sizes="any">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+
+  <!-- PNG fallback σε διάφορα sizes -->
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+
+  <!-- Apple Touch Icon (iOS home screen) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+
+  <!-- Web App Manifest (για PWA/Android) -->
+  <link rel="manifest" href="favicons/site.webmanifest">
+
+  <!-- Safari pinned tab (macOS) -->
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#0a0a0a">
+
+  <!-- Windows tiles -->
+  <meta name="msapplication-TileColor" content="#0a0a0a">
+  <meta name="msapplication-config" content="/browserconfig.xml">
+
+  <!-- Theme color για mobile browsers -->
+  <meta name="theme-color" content="#0a0a0a">
 </head>
 <body>
   <canvas id="bg-canvas" aria-hidden="true"></canvas>
