--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>George Christopoulos</title>
-  <meta name="description" content="Minimal, modern προσωπικό website με animations." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="I’m George, and I’m looking for a hybrid or remote software engineering role" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -53,12 +54,33 @@
   <main>
     <section class="hero" id="home">
       <div class="hero-inner">
-        <h1 class="hero-title">Hey👋! <br />I am <span class="accent">George </span></h1>
-        <p class="hero-subtitle">I am a Computer Science graduate who enjoys building Android apps.</p>
-        <div class="cta">
+        <h1 class="hero-title">Hey! <br />I am <span class="accent">George </span></h1>
+          <p class="hero-subtitle">
+            <span id="typeTarget"></span>
+          </p>        
+          <div class="cta">
           <a href="#work" class="btn primary">Check My Projects</a>
           <a href="#contact" class="btn ghost">Contact with me</a>
         </div>
+     <div class="socials2">
+  <a href="https://github.com/Georgechrp" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="social2 github">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 0C5.37 0 0 5.37 0 12c0 5.302 3.438 9.8 8.205 11.385.6.113.82-.26.82-.577 0-.285-.011-1.04-.017-2.042-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.758-1.333-1.758-1.089-.745.083-.73.083-.73 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.76-1.606-2.665-.303-5.467-1.332-5.467-5.93 0-1.31.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.51 11.51 0 0 1 3.003-.404c1.02.005 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.652.243 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.61-2.807 5.624-5.48 5.921.43.372.815 1.103.815 2.222 0 1.606-.015 2.902-.015 3.296 0 .319.216.694.825.576C20.565 21.796 24 17.298 24 12 24 5.37 18.627 0 12 0z"/>
+    </svg>
+  </a>
+
+  <a href="https://www.linkedin.com/in/georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social2 linkedin">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M20.452 20.452h-3.554v-5.569c0-1.329-.027-3.037-1.85-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.358V9h3.414v1.561h.049c.476-.9 1.637-1.85 3.369-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 1 1 0-4.124 2.062 2.062 0 0 1 0 4.124zM7.114 20.452H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.73C24 .774 23.2 0 22.222 0z"/>
+    </svg>
+  </a>
+
+  <a href="https://www.instagram.com/georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social2 instagram">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.427.403a4.92 4.92 0 0 1 1.78 1.153 4.92 4.92 0 0 1 1.153 1.78c.163.457.347 1.257.403 2.427.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.403 2.427a4.92 4.92 0 0 1-1.153 1.78 4.92 4.92 0 0 1-1.78 1.153c-.457.163-1.257.347-2.427.403-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.427-.403a4.92 4.92 0 0 1-1.78-1.153 4.92 4.92 0 0 1-1.153-1.78c-.163-.457-.347-1.257-.403-2.427C2.175 15.784 2.163 15.404 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.403-2.427A4.92 4.92 0 0 1 3.789 2.94a4.92 4.92 0 0 1 1.78-1.153c.457-.163 1.257-.347 2.427-.403C8.263 1.175 8.644 1.163 11.848 1.163M12 0C8.741 0 8.332.014 7.053.072 5.775.131 4.897.308 4.158.555a6.92 6.92 0 0 0-2.5 1.623A6.92 6.92 0 0 0 .555 4.158c-.247.739-.424 1.617-.483 2.895C.014 8.332 0 8.741 0 12c0 3.259.014 3.668.072 4.947.059 1.278.236 2.156.483 2.895a6.92 6.92 0 0 0 1.623 2.5 6.92 6.92 0 0 0 2.5 1.623c.739.247 1.617.424 2.895.483C8.332 23.986 8.741 24 12 24s3.668-.014 4.947-.072c1.278-.059 2.156-.236 2.895-.483a6.92 6.92 0 0 0 2.5-1.623 6.92 6.92 0 0 0 1.623-2.5c.247-.739.424-1.617.483-2.895.058-1.279.072-1.688.072-4.947 0-3.259-.014-3.668-.072-4.947-.059-1.278-.236-2.156-.483-2.895a6.92 6.92 0 0 0-1.623-2.5A6.92 6.92 0 0 0 19.842.555c-.739-.247-1.617-.424-2.895-.483C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm7.2-11.36a1.44 1.44 0 1 1-2.88 0 1.44 1.44 0 0 1 2.88 0z"/>
+    </svg>
+  </a>
+</div>
       </div>
     </section>
 
@@ -66,20 +88,21 @@
       <div class="container">
         <h2>About</h2>
         <p>
-          I am a Computer Science graduate who enjoys building Android apps.
+          I am a Computer Science graduate who enjoys building Android & Web Applications.
         </p>
         <div class="features">
           <div class="feature">
-            <h3>Responsive</h3>
-            <p>Προσαρμοσμένο για κινητά, tablet και desktop με fluid grid και flex layouts.</p>
+            <h3>Education</h3>
+            <p>Department of Informatics, University of Piraeus | BS in Computer Science
+</p>
           </div>
           <div class="feature">
-            <h3>Minimal</h3>
-            <p>Καθαρή τυπογραφία, άνετα κενά, και εστίαση στο περιεχόμενο.</p>
+            <h3>Passion</h3>
+            <p>Passionate about building fast and easy-to-use mobile apps and web pages</p>
           </div>
           <div class="feature">
-            <h3>Modern</h3>
-            <p>CSS variables, prefers-reduced-motion, και ελαφρύ JS για animations.</p>
+            <h3>Skills</h3>
+            <p>Kotlin • Java • C# | Firebase • MySQL  <br /> Android Studio • InteliJ • Visual Studio • Git    </p>
           </div>
         </div>
       </div>
@@ -93,7 +116,7 @@
             <div class="card-media"></div>
             <div class="card-body">
               <h3>Chordio</h3>
-              <p>Android app for music players</p>
+              <p>Android app for music players | Kotlin, Jetpack Compose</p>
               <div class="card-actions">
                 <a href="https://georgioschristopoulos.info/assets/mythesis/index.html"  target="_blank" class="link">Presentation</a>
                 <a href="https://github.com/Georgechrp/Chordio-Android-App" target="_blank" class="link">Code</a>
@@ -104,9 +127,9 @@
             <div class="card-media"></div>
             <div class="card-body">
               <h3>Pokemon Explorer</h3>
-              <p>Kotlin, Jetpack Compose</p>
+              <p>Android app to explore Pokémon | Kotlin, Jetpack Compose</p>
               <div class="card-actions">
-                <a href="#" target="_blank" class="link">Presentation</a>
+                <!-- <a href="#" target="_blank" class="link">Presentation</a>  -->
                 <a href="https://github.com/Georgechrp/PokemonExplorer" target="_blank" class="link">Code</a>
               </div>
             </div>
@@ -114,10 +137,10 @@
           <article class="card" data-project="salesflow">
             <div class="card-media"></div>
             <div class="card-body">
-              <h3></h3>
-              <p>Μικρή περιγραφή για το project. Τεχνολογίες: Design, Motion.</p>
+              <h3>SalesFlow JSP</h3>
+              <p>Manage Clients & Sales | Java, JSP, XML, Servlets</p>
               <div class="card-actions">
-                <a href="#" target="_blank" class="link">Presentation</a>
+                <!-- <a href="#" target="_blank" class="link">Presentation</a> -->
                 <a href="https://github.com/Georgechrp/MobileAccountManagement1-2024" target="_blank" class="link">Code</a>
               </div>
             </div>
@@ -129,7 +152,7 @@
         <section class="section contact" id="contact">
             <div class="container">
                 <h2>Επικοινωνία</h2>
-                <p>Ανοικτός/ή για συνεργασίες και projects. Στείλε μου μήνυμα!</p>
+                
 
                 <form class="contact-form" action="https://formspree.io/f/mkgzkjjr" method="POST">
                 <div class="form-row">
@@ -176,5 +199,6 @@
   </footer>
 
   <script src="script.js"></script>
+  <script src="type.js"></script>
 </body>
 </html>
