--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#work">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li>
-          <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme" aria-pressed="false" title="Toggle theme">
+          <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme" aria-pressed="false" title="Change Mode">
             <!-- Sun -->
             <svg class="icon sun" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M6.76 4.84l-1.8-1.79L3.17 4.84l1.79 1.79 1.8-1.79zm10.48 0l1.8-1.79 1.79 1.79-1.79 1.79-1.8-1.79zM12 2h0c.55 0 1 .45 1 1v2a1 1 0 1 1-2 0V3c0-.55.45-1 1-1zm0 17a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm8-6h2a1 1 0 1 1 0 2h-2a1 1 0 1 1 0-2zM2 13a1 1 0 1 1 0-2h2a1 1 0 1 1 0 2H2zm14.45 6.76l1.8 1.79 1.79-1.79-1.79-1.79-1.8 1.79zM4.96 18.97l-1.79 1.79 1.79 1.79 1.79-1.79-1.79-1.79zM12 19a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1z"/>
@@ -163,7 +163,7 @@
 
         <section class="section contact" id="contact">
             <div class="container">
-                <h2 style="max-width: min(100%, 960px);margin: 0 auto clamp(12px, 1.5vw, 24px);">Contact</h2>
+                <h2 >Contact</h2>
                 
 
                 <form class="contact-form" action="https://formspree.io/f/mkgzkjjr" method="POST">
@@ -201,12 +201,12 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Personal Page | George Christopoulos</p>
-      <div class="socials">
+      <p>© <span id="year"></span> George Christopoulos | Portfolio & Projects.</p>
+      <!--<div class="socials">
         <a href="https://github.com/Georgechrp"  target="_blank" aria-label="GitHub" class="social">GitHub</a>
         <a href="https://www.linkedin.com/in/georgechrp/" target="_blank" aria-label="LinkedIn" class="social">LinkedIn</a>
         <a href="https://www.instagram.com/georgechrp/" target="_blank" aria-label="Instagram" class="social">Instagram</a>
-      </div>
+      </div>-->
     </div>
   </footer>
 
