update social media

--- a/index.html
+++ b/index.html
@@ -88,10 +88,16 @@
     </svg>
   </a>
 
-  <a href="https://www.instagram.com/georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social2 instagram">
+  <!--<a href="https://www.instagram.com/georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social2 instagram">
     <svg viewBox="0 0 24 24" aria-hidden="true">
       <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.427.403a4.92 4.92 0 0 1 1.78 1.153 4.92 4.92 0 0 1 1.153 1.78c.163.457.347 1.257.403 2.427.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.403 2.427a4.92 4.92 0 0 1-1.153 1.78 4.92 4.92 0 0 1-1.78 1.153c-.457.163-1.257.347-2.427.403-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.427-.403a4.92 4.92 0 0 1-1.78-1.153 4.92 4.92 0 0 1-1.153-1.78c-.163-.457-.347-1.257-.403-2.427C2.175 15.784 2.163 15.404 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.403-2.427A4.92 4.92 0 0 1 3.789 2.94a4.92 4.92 0 0 1 1.78-1.153c.457-.163 1.257-.347 2.427-.403C8.263 1.175 8.644 1.163 11.848 1.163M12 0C8.741 0 8.332.014 7.053.072 5.775.131 4.897.308 4.158.555a6.92 6.92 0 0 0-2.5 1.623A6.92 6.92 0 0 0 .555 4.158c-.247.739-.424 1.617-.483 2.895C.014 8.332 0 8.741 0 12c0 3.259.014 3.668.072 4.947.059 1.278.236 2.156.483 2.895a6.92 6.92 0 0 0 1.623 2.5 6.92 6.92 0 0 0 2.5 1.623c.739.247 1.617.424 2.895.483C8.332 23.986 8.741 24 12 24s3.668-.014 4.947-.072c1.278-.059 2.156-.236 2.895-.483a6.92 6.92 0 0 0 2.5-1.623 6.92 6.92 0 0 0 1.623-2.5c.247-.739.424-1.617.483-2.895.058-1.279.072-1.688.072-4.947 0-3.259-.014-3.668-.072-4.947-.059-1.278-.236-2.156-.483-2.895a6.92 6.92 0 0 0-1.623-2.5A6.92 6.92 0 0 0 19.842.555c-.739-.247-1.617-.424-2.895-.483C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm7.2-11.36a1.44 1.44 0 1 1-2.88 0 1.44 1.44 0 0 1 2.88 0z"/>
     </svg>
+  </a>-->
+
+  <a href="https://t.me/@Georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="Telegrem" class="social2 telegram">
+<svg viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg">
+  <path d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.6 81.6l-23.2 109.6c-1.8 8.1-6.6 10.1-13.4 6.3l-37-27.3-17.9 17.2c-2 2-3.7 3.7-7.6 3.7l2.7-38.2 69.6-62.8c3-2.7-0.7-4.2-4.6-1.5l-86.1 54.2-37.1-11.6c-8-2.5-8.1-8-1.7-10.6l145.1-55.9c6.7-2.5 12.6 1.5 10.4 10.5z" fill="#229ED9"/>
+</svg>
   </a>
 </div>
       </div>
@@ -101,7 +107,14 @@
       <div class="container">
         <h2>About</h2>
         <p class="about-lead">
-        I am a Computer Science graduate who enjoys building Android apps. I have experience with Java, Kotlin, and tools like Firebase Jetpack Compose. <br \> During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.     <br \> I am passionate about building fast and easy-to-use mobile apps and web pages.    </p>
+          Junior Software Engineer with a strong interest in Android development and experience in building Kotlin-based
+          applications. Eager to contribute to real-world projects and grow within a collaborative and innovative team
+          environment.
+
+                    <p> During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.</p>
+
+        <!--I am a Computer Science graduate who enjoys building Android apps. I have experience with Java, Kotlin, and tools like Firebase Jetpack Compose. <br \> During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.     <br \> I am passionate about building fast and easy-to-use mobile apps and web pages.    </p>
+        -->
         <p class="about-edu">
           <span class="edu-label">Education</span>
           Department of Informatics, University of Piraeus — BSc in Computer Science [2020-2025] 
