--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </svg>
   </a>-->
 
-  <a href="https://t.me/@Georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="Telegrem" class="social2 telegram">
-<svg viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg">
-  <path d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.6 81.6l-23.2 109.6c-1.8 8.1-6.6 10.1-13.4 6.3l-37-27.3-17.9 17.2c-2 2-3.7 3.7-7.6 3.7l2.7-38.2 69.6-62.8c3-2.7-0.7-4.2-4.6-1.5l-86.1 54.2-37.1-11.6c-8-2.5-8.1-8-1.7-10.6l145.1-55.9c6.7-2.5 12.6 1.5 10.4 10.5z" fill="#229ED9"/>
-</svg>
+  <a href="https://t.me/Georgechrp" target="_blank" rel="noopener noreferrer" aria-label="Telegram" class="social2 telegram">
+    <svg viewBox="0 0 240 240" aria-hidden="true">
+      <path fill="currentColor" d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.6 81.6l-23.2 109.6c-1.8 8.1-6.6 10.1-13.4 6.3l-37-27.3-17.9 17.2c-2 2-3.7 3.7-7.6 3.7l2.7-38.2 69.6-62.8c3-2.7-0.7-4.2-4.6-1.5l-86.1 54.2-37.1-11.6c-8-2.5-8.1-8-1.7-10.6l145.1-55.9c6.7-2.5 12.6 1.5 10.4 10.5z"/>
+    </svg>
   </a>
 </div>
       </div>
@@ -108,17 +108,17 @@
         <h2>About</h2>
         <p class="about-lead">
           Junior Software Engineer with a strong interest in Android development and experience in building Kotlin-based
-          applications. Eager to contribute to real-world projects and grow within a collaborative and innovative team
-          environment.
+          applications. Eager to contribute to real-world projects and grow within a collaborative and innovative team environment.
+        </p>
 
-                    <p> During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.</p>
+        <p class="about-lead">
+          During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.
+        </p>
 
-        <!--I am a Computer Science graduate who enjoys building Android apps. I have experience with Java, Kotlin, and tools like Firebase Jetpack Compose. <br \> During my studies at the University of Piraeus, I worked on several projects, including my thesis, "Chordio" — a mobile app that helps users find guitar chords for their favorite songs.     <br \> I am passionate about building fast and easy-to-use mobile apps and web pages.    </p>
-        -->
         <p class="about-edu">
           <span class="edu-label">Education</span>
-          Department of Informatics, University of Piraeus — BSc in Computer Science [2020-2025] 
-          <br \>
+          Department of Informatics, University of Piraeus — BSc in Computer Science
+          [<span class="nowrap">2020‑2025</span>]
         </p>
       </div>
     </section>
@@ -255,15 +255,49 @@
 
 
   <footer class="site-footer">
-    <div class="container footer-inner">
-      <p>© <span id="year"></span> George Christopoulos | Portfolio & Projects.</p>
-      <!--<div class="socials">
-        <a href="https://github.com/Georgechrp"  target="_blank" aria-label="GitHub" class="social">GitHub</a>
-        <a href="https://www.linkedin.com/in/georgechrp/" target="_blank" aria-label="LinkedIn" class="social">LinkedIn</a>
-        <a href="https://www.instagram.com/georgechrp/" target="_blank" aria-label="Instagram" class="social">Instagram</a>
-      </div>-->
+  <div class="container footer-grid">
+    <div class="footer-brand">
+      <h3>Christopoulos George</h3>
+      <p class="footer-tagline">
+        Android & Web engineer focused on clean UX, performance and modern tooling.
+      </p>
+      <div class="socials2">
+        <a href="https://github.com/Georgechrp" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="social2 github">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.302 3.438 9.8 8.205 11.385.6.113.82-.26.82-.577 0-.285-.011-1.04-.017-2.042-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.758-1.333-1.758-1.089-.745.083-.73.083-.73 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.76-1.606-2.665-.303-5.467-1.332-5.467-5.93 0-1.31.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.51 11.51 0 0 1 3.003-.404c1.02.005 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.652.243 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.61-2.807 5.624-5.48 5.921.43.372.815 1.103.815 2.222 0 1.606-.015 2.902-.015 3.296 0 .319.216.694.825.576C20.565 21.796 24 17.298 24 12 24 5.37 18.627 0 12 0z"/></svg>
+        </a>
+        <a href="https://www.linkedin.com/in/georgechrp/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social2 linkedin">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.452 20.452h-3.554v-5.569c0-1.329-.027-3.037-1.85-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.358V9h3.414v1.561h.049c.476-.9 1.637-1.85 3.369-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 1 1 0-4.124 2.062 2.062 0 0 1 0 4.124zM7.114 20.452H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.73C24 .774 23.2 0 22.222 0z"/></svg>
+        </a>
+        <a href="https://t.me/Georgechrp" target="_blank" rel="noopener noreferrer" aria-label="Telegram" class="social2 telegram">
+          <svg viewBox="0 0 240 240" aria-hidden="true"><path fill="currentColor" d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.6 81.6l-23.2 109.6c-1.8 8.1-6.6 10.1-13.4 6.3l-37-27.3-17.9 17.2c-2 2-3.7 3.7-7.6 3.7l2.7-38.2 69.6-62.8c3-2.7-0.7-4.2-4.6-1.5l-86.1 54.2-37.1-11.6c-8-2.5-8.1-8-1.7-10.6l145.1-55.9c6.7-2.5 12.6 1.5 10.4 10.5z"/></svg>
+        </a>
+      </div>
     </div>
-  </footer>
+
+    <nav class="footer-links">
+      <h4>Explore</h4>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#work">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="footer-contact">
+      <h4>Get in touch</h4>
+      <p>Open to hybrid or remote roles. Based in Greece (EET).</p>
+      <a class="btn ghost" href="#contact">Send a message</a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div class="container footer-bottom-inner">
+      <p>© <span id="year"></span> George Christopoulos. All rights reserved.</p>
+      <a href="#home" class="to-top" aria-label="Back to top">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 5l7 7-1.41 1.41L13 9.83V20h-2V9.83L6.41 13.41 5 12l7-7z" fill="currentColor"/></svg>
+      </a>
+    </div>
+  </div>
+</footer>
 
   <script src="script.js"></script>
   <script src="type.js"></script>
