add thesis pres

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <h3>Chordio</h3>
               <p>Android app for music players | Kotlin, Jetpack Compose</p>
               <div class="card-actions">
-                <a href="https://georgioschristopoulos.info/assets/mythesis/index.html"  target="_blank" class="link">Presentation</a>
+                <a href="/mythesis/index.html"  target="_blank" class="link">Presentation</a>
                 <a href="https://github.com/Georgechrp/Chordio-Android-App" target="_blank" class="link">Code</a>
               </div>
             </div>
