add pokemon presentation

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <h3>Pokemon Explorer</h3>
               <p>Android app to explore Pokémon | Kotlin, Jetpack Compose</p>
               <div class="card-actions">
-                <!-- <a href="#" target="_blank" class="link">Presentation</a>  -->
+                 <a href="/pokemonexplorerpresentation/index.html" target="_blank" class="link">Presentation</a> 
                 <a href="https://github.com/Georgechrp/PokemonExplorer" target="_blank" class="link">Code</a>
               </div>
             </div>
