--- a/index.html
+++ b/index.html
@@ -101,18 +101,15 @@
   </a>
 
   <!-- CV button (opens modal with embedded PDF) -->
-  <button type="button" class="social2 cv cv-btn" aria-haspopup="dialog" aria-controls="cvModal" aria-label="Άνοιγμα Βιογραφικού (PDF)">
-    <svg viewBox="0 0 24 24" aria-hidden="true" width="28" height="28">
-      <!-- Έντονο περίγραμμα αρχείου -->
-      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9l-6-7z"
-            fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" />
-      <!-- Κόκκινο “διπλωμένο” corner -->
-      <path d="M15 2 L21 8 L15 8 Z" fill="#e53e3e"/>
-      <!-- Κόκκινες γραμμές που παραπέμπουν σε PDF περιεχόμενο -->
-      <rect x="7" y="12.5" width="10" height="2" rx="1" fill="#e53e3e"/>
-      <rect x="7" y="16.5" width="8" height="2" rx="1" fill="#e53e3e"/>
-    </svg>
-  </button>
+<button type="button" class="social2 cv cv-btn" aria-haspopup="dialog" aria-controls="cvModal" aria-label="Άνοιγμα Βιογραφικού (PDF)">
+  <svg viewBox="0 0 24 24" aria-hidden="true" width="40" height="40">
+    <!-- Μεγαλύτερο κόκκινο “διπλωμένο” corner -->
+    <path d="M14 1 L23 10 L14 10 Z" fill="currentColor"/>
+    <!-- Πιο παχιές και φαρδιές γραμμές (PDF lines) -->
+    <rect x="5" y="12" width="14" height="3.2" rx="1.6" fill="currentColor"/>
+    <rect x="5" y="17" width="12" height="3.2" rx="1.6" fill="currentColor"/>
+  </svg>
+</button>
 
     <!-- Modal -->
     <div id="cvModal" class="cv-modal" role="dialog" aria-modal="true" aria-labelledby="cvTitle" aria-hidden="true">
