--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -96,18 +96,25 @@
       <div class="container">
         <h3>Screens / Mockups</h3>
         <div class="shots">
-          <div class="shot">
-            <div class="ph" aria-hidden="true">Splash / Hero</div>
-            <p class="caption">Αρχική οθόνη παρουσίασης τύπων</p>
-          </div>
-          <div class="shot">
-            <div class="ph" aria-hidden="true">List</div>
-            <p class="caption">Λίστα Pokémon με «Load more»</p>
-          </div>
-          <div class="shot">
-            <div class="ph" aria-hidden="true">Details</div>
-            <p class="caption">Κάρτα λεπτομερειών με εικόνα και stats</p>
-          </div>
+        <div class="shot">
+          <figure class="shot-figure">
+            <img src="assets/screens/splash.jpg" alt="Αρχική οθόνη παρουσίασης τύπων" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Αρχική οθόνη παρουσίασης τύπων</figcaption>
+          </figure>
+        </div>
+        <div class="shot">
+          <figure class="shot-figure">
+            <img src="assets/screens/List.jpg" alt="Λίστα Pokémon με Load more" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Λίστα Pokémon με «Load more»</figcaption>
+          </figure>
+        </div>
+
+        <div class="shot">
+          <figure class="shot-figure">
+            <img src="assets/screens/search.jpg" alt="Κάρτα λεπτομερειών με εικόνα και stats" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Κάρτα λεπτομερειών με εικόνα και stats</figcaption>
+          </figure>
+        </div>
         </div>
       </div>
     </section>
