--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -98,20 +98,27 @@
         <div class="shots">
         <div class="shot">
           <figure class="shot-figure">
-            <img src="assets/screens/splash.jpg" alt="Αρχική οθόνη παρουσίασης τύπων" width="1080" height="2400" loading="lazy" />
-            <figcaption class="caption">Αρχική οθόνη παρουσίασης τύπων</figcaption>
+            <img src="assets/screens/splash.jpg" alt="Splash Screen" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Splash Screen</figcaption>
           </figure>
         </div>
         <div class="shot">
           <figure class="shot-figure">
-            <img src="assets/screens/List.jpg" alt="Λίστα Pokémon με Load more" width="1080" height="2400" loading="lazy" />
-            <figcaption class="caption">Λίστα Pokémon με «Load more»</figcaption>
+            <img src="assets/screens/main.jpg" alt="Αρχική οθόνη" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Αρχική οθόνη</figcaption>
           </figure>
         </div>
 
         <div class="shot">
           <figure class="shot-figure">
-            <img src="assets/screens/search.jpg" alt="Κάρτα λεπτομερειών με εικόνα και stats" width="1080" height="2400" loading="lazy" />
+            <img src="assets/screens/type.jpg" alt="Λίστα Pokémon με Load more" width="1080" height="2400" loading="lazy" />
+            <figcaption class="caption">Λίστα Pokémon με Load more</figcaption>
+          </figure>
+        </div>
+
+        <div class="shot">
+          <figure class="shot-figure">
+            <img src="assets/screens/details.jpg" alt="Κάρτα λεπτομερειών με εικόνα και stats" width="1080" height="2400" loading="lazy" />
             <figcaption class="caption">Κάρτα λεπτομερειών με εικόνα και stats</figcaption>
           </figure>
         </div>
@@ -123,8 +130,7 @@
       <div class="container">
         <h3>Demo / Βίντεο</h3>
         <p>
-          Μπορείς να προσθέσεις βίντεο αργότερα. Έχουμε placeholder πιο κάτω για να το αντικαταστήσεις
-          εύκολα (βάλε το αρχείο σου αντί για <code>assets/demo.mp4</code> ή σύνδεσμο streaming).
+           <code>assets/demo.mp4</code> .
         </p>
         <div class="video-wrap">
           <video id="demoVideo" class="video" controls poster="" preload="metadata">
@@ -140,15 +146,15 @@
         <div>
           <h3>Εγκατάσταση & Εκτέλεση (Android / Kotlin)</h3>
           <pre class="code"><code>
-# Προαπαιτούμενα
-- Android Studio (Giraffe ή νεότερο)
-- JDK 17
+          # Προαπαιτούμενα
+          - Android Studio (Giraffe ή νεότερο)
+          - JDK 17
 
-# Βήματα
-1. Κάνε clone το repo
-2. Άνοιξέ το στο Android Studio
-3. Ρύθμισε το minSdk/targetSdk (προτεινόμενο: 24+/34)
-4. Τρέξε το project σε emulator ή συσκευή
+          # Βήματα
+          1. Κάνε clone το repo
+          2. Άνοιξέ το στο Android Studio
+          3. Ρύθμισε το minSdk/targetSdk (προτεινόμενο: 24+/34)
+          4. Τρέξε το project σε emulator ή συσκευή
           </code></pre>
         </div>
         <div class="card">
