add video presentation

--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -130,11 +130,11 @@
       <div class="container">
         <h3>Demo / Βίντεο</h3>
         <p>
-           <code>assets/demo.mp4</code> .
+           <code>Video Presentation</code> .
         </p>
         <div class="video-wrap">
           <video id="demoVideo" class="video" controls poster="" preload="metadata">
-            <source src="assets/demo.mp4" type="video/mp4" />
+            <source src="assets/video.mp4" type="video/mp4" />
             Το πρόγραμμα περιήγησής σου δεν υποστηρίζει ενσωματωμένα βίντεο.
           </video>
         </div>
