--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </button>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#work">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
