add moviesearch Project

--- a/index.html
+++ b/index.html
@@ -249,6 +249,17 @@
               </div>
             </div>
           </article>
+          <article class="card" data-project="moviesearch">
+            <div class="card-media"></div>
+            <div class="card-body">
+              <h3>MovieSearch</h3>
+              <p>Find any movie you want from TMBD and read details | Kotlin</p>
+              <div class="card-actions">
+                 <a href="moviesearchPresentation/index.html" target="_blank" class="link">Presentation</a> 
+                <a href="https://github.com/Georgechrp/MovieSearch" target="_blank" class="link">Code</a>
+              </div>
+            </div>
+          </article>
           <article class="card" data-project="salesflow">
             <div class="card-media"></div>
             <div class="card-body">
