add button for download movie listapp

--- a/moviesearchPresentation/index.html
+++ b/moviesearchPresentation/index.html
@@ -95,6 +95,7 @@
     </div>
         <div style="text-align:center;">
       <a href="https://github.com/Georgechrp/MovieSearch" target="_blank" class="btn">🔗 View on GitHub</a>
+      <a href="myapp.apk" download class="btn">Download the App</a>
     </div>
 <h2>⚙️ Dependencies & Plugins</h2>
     <p>Οι βασικές βιβλιοθήκες / plugins που χρησιμοποιήθηκαν στο project:</p>
