--- a/mythesis/index.html
+++ b/mythesis/index.html
@@ -39,6 +39,7 @@
 
     <section class="buttons">
       <a href="https://github.com/Georgechrp/ChordsHub-Android-App" class="btn" target="_blank">GitHub Repository</a>
+       <a href="app-debug.apk" download class="btn">Download the App</a>
       <!--<a href="https://play.google.com/store/apps/details?id=com.chordio" class="btn" target="_blank">View on Play Store</a>-->
     </section>
 
