add apk pokemon

--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -38,6 +38,7 @@
         <div class="hero-actions">
           <a href="#features" class="btn primary">Δες τα Χαρακτηριστικά</a>
           <a href="#demo" class="btn">Demo / Βίντεο</a>
+          <a href="app-debug.apk" download class="btn">Download the App</a>
         </div>
       </div>
     </section>
