--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="card-media"></div>
             <div class="card-body">
               <h3>MovieSearch</h3>
-              <p>Find any movie you want from TMBD and read details | Kotlin</p>
+              <p>Discover movies from TMDB, explore genres, and view detailed information | Kotlin, Jetpack Compose, Hilt</p>
               <div class="card-actions">
                  <a href="moviesearchPresentation/index.html" target="_blank" class="link">Presentation</a> 
                 <a href="https://github.com/Georgechrp/MovieSearch" target="_blank" class="link">Code</a>
@@ -359,9 +359,9 @@
   </div>
 </footer>
 
-  <script src="script.js"></script>
-  <script src="type.js"></script>
-  <script src="mode.js"></script>
-  <script src="cv.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/type.js"></script>
+  <script src="/scripts/mode.js"></script>
+  <script src="/scripts/cv.js"></script>
 </body>
 </html>
